--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-    alias(libs.plugins.android.application)
-    alias(libs.plugins.jetbrains.kotlin.android)
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
 }
 
 android {
     namespace 'com.example.islamic'
-    compileSdk 35
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.islamic"
@@ -14,9 +14,9 @@ android {
         targetSdk 34
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildFeatures {
         viewBinding true
     }
@@ -37,41 +37,43 @@ android {
 }
 
 dependencies {
+    // Core & UI
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.fragment:fragment-ktx:1.7.1'
+    implementation libs.androidx.swiperefreshlayout
 
-    implementation libs.androidx.core.ktx
-    implementation libs.androidx.appcompat
-    implementation libs.material
-    implementation libs.androidx.activity
-    implementation libs.androidx.constraintlayout
-    implementation libs.androidx.navigation.fragment.ktx
-    implementation libs.androidx.navigation.ui.ktx
-    testImplementation libs.junit
-    androidTestImplementation libs.androidx.junit
-    androidTestImplementation libs.androidx.espresso.core
-
-
-    def lifecycle_version = "2.6.1"
+    // Lifecycle (ViewModel & LiveData)
+    def lifecycle_version = "2.7.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
-    // Retrofit (Use Retrofit without coroutines adapter)
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    // Remove this line to avoid coroutine dependencies
-    // implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    // Navigation
+    def navigation_version = "2.7.7"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation 'com.google.android.gms:play-services-location:18.0.0'
-
+    // Room (Database)
     def room_version = "2.6.1"
     implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.0" // Update to the latest version
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.0"
-    implementation 'androidx.fragment:fragment-ktx:1.5.7'
-    implementation 'com.airbnb.android:lottie:6.4.0'
+    kapt "androidx.room:room-compiler:$room_version"
 
+    // Adhan (Prayer Times)
+    implementation 'com.batoulapps.adhan:adhan:1.2.1'
+
+    // Location
+    implementation 'com.google.android.gms:play-services-location:21.2.0'
+
+    // Other Utilities
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    implementation 'com.airbnb.android:lottie:6.4.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+    // Testing
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
