--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
     <!-- Your original permissions -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <!--
      FIX #1: Explicitly state that GPS is NOT required.
      This tells the Amazon Appstore that devices without a GPS chip (like many Fire Tablets)
      can still run your app. Your app should handle cases where fine location is not available.
     -->
-    <uses-feature android:name="android.hardware.location.gps" android:required="false" />
-    <uses-feature android:name="android.hardware.location" android:required="false" />
-
-
+    <uses-feature
+        android:name="android.hardware.location.gps"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.location"
+        android:required="false" />
     <!--
      FIX #2: Explicitly state that a camera is NOT required.
      This is important if your QiblaActivity uses the camera. This ensures your app
      can be installed on devices without a camera, like Fire TV.
     -->
-    <uses-feature android:name="android.hardware.camera" android:required="false" />
-    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
-
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -36,18 +39,24 @@
         android:theme="@style/Theme.Islamic"
         tools:targetApi="31">
         <activity
+            android:name=".view.TasbeehActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.DuaActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".SplashScreen"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
-
-        <!-- NOTE: These empty meta-data tags are not necessary, but they are harmless. -->
+            android:exported="false" /> <!-- NOTE: These empty meta-data tags are not necessary, but they are harmless. -->
         <activity
             android:name=".view.Azkar_After"
             android:exported="false">
@@ -85,7 +94,35 @@
         </activity>
         <activity
             android:name=".view.Surah"
-            android:exported="true">
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".view.TafseerSurahActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".view.TafseerDetailActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".view.HadithListActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".view.HadithDetailActivity"
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
